Finished IPL Project

--- a/IPL_Project.ipynb
+++ b/IPL_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YpLQMaA5ZE1ytoKNqnys7vsXq3Y4EsY1",
-      "authorship_tag": "ABX9TyN/OWssxZ70FLGHSXaj5w6B",
+      "authorship_tag": "ABX9TyOytH/aMVrbbuXNaaFh5rAE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1249,9 +1249,441 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "data_set['season'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 648
+        },
+        "id": "WH_drAakFgZT",
+        "outputId": "a3b31ad6-e28b-4869-e737-967d16b4f026"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "season\n",
+              "2013       76\n",
+              "2023       74\n",
+              "2012       74\n",
+              "2022       74\n",
+              "2011       73\n",
+              "2024       71\n",
+              "2018       60\n",
+              "2021       60\n",
+              "2020/21    60\n",
+              "2019       60\n",
+              "2016       60\n",
+              "2014       60\n",
+              "2009/10    60\n",
+              "2017       59\n",
+              "2015       59\n",
+              "2007/08    58\n",
+              "2009       57\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>season</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2013</th>\n",
+              "      <td>76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023</th>\n",
+              "      <td>74</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012</th>\n",
+              "      <td>74</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022</th>\n",
+              "      <td>74</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2011</th>\n",
+              "      <td>73</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2024</th>\n",
+              "      <td>71</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2018</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020/21</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2016</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2014</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2009/10</th>\n",
+              "      <td>60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2017</th>\n",
+              "      <td>59</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2015</th>\n",
+              "      <td>59</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2007/08</th>\n",
+              "      <td>58</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2009</th>\n",
+              "      <td>57</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_set['city'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "LpQFxxQgJPpr",
+        "outputId": "a886ec74-ca14-4c00-8553-5509d1c2b469"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "city\n",
+              "Mumbai            173\n",
+              "Kolkata            93\n",
+              "Delhi              90\n",
+              "Chennai            85\n",
+              "Hyderabad          77\n",
+              "Bangalore          65\n",
+              "Chandigarh         61\n",
+              "Jaipur             57\n",
+              "Pune               51\n",
+              "Abu Dhabi          37\n",
+              "Ahmedabad          36\n",
+              "Bengaluru          29\n",
+              "Durban             15\n",
+              "Visakhapatnam      15\n",
+              "Lucknow            14\n",
+              "Dubai              13\n",
+              "Dharamsala         13\n",
+              "Centurion          12\n",
+              "Rajkot             10\n",
+              "Sharjah            10\n",
+              "Indore              9\n",
+              "Navi Mumbai         9\n",
+              "Johannesburg        8\n",
+              "Cuttack             7\n",
+              "Port Elizabeth      7\n",
+              "Ranchi              7\n",
+              "Cape Town           7\n",
+              "Raipur              6\n",
+              "Mohali              5\n",
+              "Kochi               5\n",
+              "Kanpur              4\n",
+              "Kimberley           3\n",
+              "East London         3\n",
+              "Guwahati            3\n",
+              "Nagpur              3\n",
+              "Bloemfontein        2\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>city</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Mumbai</th>\n",
+              "      <td>173</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Kolkata</th>\n",
+              "      <td>93</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Delhi</th>\n",
+              "      <td>90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Chennai</th>\n",
+              "      <td>85</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Hyderabad</th>\n",
+              "      <td>77</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bangalore</th>\n",
+              "      <td>65</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Chandigarh</th>\n",
+              "      <td>61</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Jaipur</th>\n",
+              "      <td>57</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Pune</th>\n",
+              "      <td>51</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Abu Dhabi</th>\n",
+              "      <td>37</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Ahmedabad</th>\n",
+              "      <td>36</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bengaluru</th>\n",
+              "      <td>29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Durban</th>\n",
+              "      <td>15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Visakhapatnam</th>\n",
+              "      <td>15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Lucknow</th>\n",
+              "      <td>14</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Dubai</th>\n",
+              "      <td>13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Dharamsala</th>\n",
+              "      <td>13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Centurion</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Rajkot</th>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sharjah</th>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Indore</th>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Navi Mumbai</th>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Johannesburg</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cuttack</th>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Port Elizabeth</th>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Ranchi</th>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cape Town</th>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Raipur</th>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Mohali</th>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Kochi</th>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Kanpur</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Kimberley</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>East London</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Guwahati</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Nagpur</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bloemfontein</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "sum = np.sum(data_set['toss_winner'] == data_set['winner'])\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r0MzAuT6JeNT",
+        "outputId": "836fa5e0-f63b-403c-ae88-58651b7954cd"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "554\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(554/data_set.shape[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_BdPNIFRKCaT",
+        "outputId": "fedd05fd-cf83-46a3-b832-265f22c39df6"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.5059360730593607\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WH_drAakFgZT"
+        "id": "rhQ0Dt8gKn2z"
       },
       "execution_count": null,
       "outputs": []
