--- a/IPL_Project.ipynb
+++ b/IPL_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YpLQMaA5ZE1ytoKNqnys7vsXq3Y4EsY1",
-      "authorship_tag": "ABX9TyOytH/aMVrbbuXNaaFh5rAE",
+      "authorship_tag": "ABX9TyPQIO7P5p15PELkjSog4z5z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
         "id": "x_G5g0i8247C",
-        "outputId": "9225c9e5-22ba-4485-ead3-f595c572e1e1"
+        "outputId": "65a4f200-c1a6-46fd-d6c1-31d75c005657"
       },
       "outputs": [
         {
@@ -80,7 +80,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ccd6d7d2-e612-4277-b4d9-8cf82a0e3be6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-16840317-4278-42d8-9ace-03c536048bd5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -243,7 +243,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ccd6d7d2-e612-4277-b4d9-8cf82a0e3be6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16840317-4278-42d8-9ace-03c536048bd5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -295,12 +295,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ccd6d7d2-e612-4277-b4d9-8cf82a0e3be6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-16840317-4278-42d8-9ace-03c536048bd5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ccd6d7d2-e612-4277-b4d9-8cf82a0e3be6');\n",
+              "        const element = document.querySelector('#df-16840317-4278-42d8-9ace-03c536048bd5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -320,8 +320,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-50d05b20-f7d8-4db1-8bdd-b15c2d41ddac\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50d05b20-f7d8-4db1-8bdd-b15c2d41ddac')\"\n",
+              "<div id=\"df-1e2bb1f3-ea03-421d-8596-f96a893c31d8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1e2bb1f3-ea03-421d-8596-f96a893c31d8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -440,7 +440,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-50d05b20-f7d8-4db1-8bdd-b15c2d41ddac button');\n",
+              "        document.querySelector('#df-1e2bb1f3-ea03-421d-8596-f96a893c31d8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -457,7 +457,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ],
       "source": [
@@ -480,7 +480,7 @@
         "id": "BL-z6X2F4H6U",
         "outputId": "8243a23f-b041-44e8-b220-ea5d92b5c247"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +507,7 @@
         "id": "ezzIKXRk6D6L",
         "outputId": "19706e1f-79c8-446d-85ec-82067c7b2c05"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,17 +615,18 @@
         "# Top 10 players from Man of the Match list\n",
         "data_set['player_of_match'].value_counts()[0:10]\n",
         "\n",
-        "# My observation: In this case 10 is inclusive"
+        "# My observation: In this case 10 is inclusive -> After one day I found it wrong.\n",
+        "# 10 is exclusive. 🙂"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 460
+          "height": 429
         },
         "id": "B2vBejn66lrT",
-        "outputId": "3cfac120-fd40-41df-b7ea-2f6cd44a63cc"
+        "outputId": "7858ded6-0f7a-4549-c977-f1590ee644a2"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +643,6 @@
               "YK Pathan         16\n",
               "RA Jadeja         16\n",
               "AD Russell        15\n",
-              "SP Narine         15\n",
               "Name: count, dtype: int64"
             ],
             "text/html": [
@@ -712,17 +712,13 @@
               "      <th>AD Russell</th>\n",
               "      <td>15</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SP Narine</th>\n",
-              "      <td>15</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div><br><label><b>dtype:</b> int64</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -740,7 +736,7 @@
         "id": "y0sWYqFi7DxD",
         "outputId": "fc20a0e2-7607-4114-b600-041a5eb1b843"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +761,7 @@
         "id": "PUxVzXpwEPGD",
         "outputId": "1fc46e51-7f32-40a7-edec-4de3e9f4dd8a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +788,7 @@
         "id": "egvo2DJ2FAQj",
         "outputId": "c182c4f1-6344-451b-8f19-dddd758824dd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1229,7 @@
         "id": "LBcaBTZvFYjD",
         "outputId": "4de27d82-f6cf-44c9-b751-a041f4f733b4"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1260,7 +1256,7 @@
         "id": "WH_drAakFgZT",
         "outputId": "a3b31ad6-e28b-4869-e737-967d16b4f026"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1404,7 +1400,7 @@
         "id": "LpQFxxQgJPpr",
         "outputId": "a886ec74-ca14-4c00-8553-5509d1c2b469"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1641,7 @@
         "id": "r0MzAuT6JeNT",
         "outputId": "836fa5e0-f63b-403c-ae88-58651b7954cd"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1668,7 +1664,7 @@
         "id": "_BdPNIFRKCaT",
         "outputId": "fedd05fd-cf83-46a3-b832-265f22c39df6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
